--- a/views/newsletter.ejs
+++ b/views/newsletter.ejs
@@ -13,7 +13,8 @@
   <div class="">
   
   <form method="POST" action='/addnews'>
-    <input type="text" class="form" name="name" placeholder="Enter Newsletter Name" required>
+    <input type="text" class="form" name="n_name" placeholder="Enter Newsletter Name" required>
+    <input type="text" class="form" name="description" placeholder="Newsletter description" required>
     <button type="submit">Add Newsletter NOW</button>  
   </form>
     
