--- a/views/unsub.ejs
+++ b/views/unsub.ejs
@@ -22,7 +22,7 @@
       <% for(var i=0; i < data1.length; i++) { %>
       <tr>
         <td><%= data1[i].n_id %></td>
-        <td><%= data1[i].name %></td>
+        <td><%= data1[i].n_name %></td>
         <td><%= data1[i].email %></td>
       </tr>
       <% } %>
