--- a/views/profile.ejs
+++ b/views/profile.ejs
@@ -13,7 +13,7 @@
     <button id=bt1>Sign-out</button>
   </form>
   <div>
-    <h1>Welcome <%= data3 %></h1>
+    <h1 id="h1">Welcome <%= data1[0].name %></h1>
     <p>Your user id is <%= data1[0].u_id %></p>
 
     <div>
@@ -30,7 +30,7 @@
       <tbody>
         <% for(var i=0; i < data4.length; i++) { %>
         <tr>
-          <td><%= data4[i].name %></td>
+          <td><%= data4[i].n_name %></td>
         </tr>
         <% } %>
       </tbody>
@@ -51,17 +51,17 @@
         <% for(var i=0; i < data2.length; i++) { %>
         <tr>
           <td><%= data2[i].n_id %></td>
-          <td><%= data2[i].name %></td>
+          <td><%= data2[i].n_name %></td>
         </tr>
         <% } %>
       </tbody>
     </table>
 
     <form action="/news">
-      <button type="submit">Subscribe another Newsletter</button>
+      <button type="submit">Subscribe a Newsletter</button>
     </form>
     <form action="/unsub">
-      <button type="submit">Unsubscribe Newsletter</button>
+      <button type="submit">Unsubscribe a Newsletter</button>
     </form>
   </div>
 </body>
