--- a/views/register.ejs
+++ b/views/register.ejs
@@ -45,6 +45,7 @@
 		<div class="login-form">
 			<h1>Newsletters Subscription System</h1>
 			<form action="regi" method="POST">
+				<input type="text" name="name" placeholder="Enter your name" required>
 				<input type="text" name="email" placeholder="Email" required>
         <input type="text" name="password" placeholder="Password" required>
         <input type="text" name="password2"placeholder="Re enter password" required>
